Run code on notebook, again

--- a/computing_pi_throwing_dart.ipynb
+++ b/computing_pi_throwing_dart.ipynb
@@ -128,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "(-0.16086470799042774, 0.7965333587214602)"
+       "(-0.2550991222831609, 0.6658104288695736)"
       ]
      },
      "execution_count": 5,
@@ -237,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.8503972352472264 -0.6126737440306538\n",
-      "This one did not land inside the circle!\n"
+      "0.27166853820886483 0.8180968710601537\n",
+      "This one landed inside the circle!\n"
      ]
     }
    ],
