Moves figure (.jpg) to specific directory

--- a/computing_pi_throwing_dart.ipynb
+++ b/computing_pi_throwing_dart.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
     "plt.hlines(y=3.14159,xmin=1,xmax=1e7,linestyle='--')\n",
     "plt.text(x=1000,y=2.95,s=\"Value of pi\",fontsize=17)\n",
     "plt.grid(True)\n",
-    "plt.savefig('pi-throwing-darts.jpg')\n",
+    "plt.savefig('figs/pi-throwing-darts.jpg')\n",
     "plt.show()"
    ]
   },
